[package]
name = "untyped-pointer"
version = "0.2.0"
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
license = "Artistic-2.0"
edition = "2021"
categories = ["no-std", "rust-patterns"]
description = "a pointer type without pointee type or mutability information"

[dev-dependencies]
expect-test = "1.4.0"

[features]
default = ["alloc"]
alloc = []
